--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appnope==0.1.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.3
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -15,7 +16,9 @@ joblib==0.14.1
 jsonschema==3.2.0
 jupyter-client==6.1.0
 jupyter-core==4.6.3
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
@@ -30,6 +33,7 @@ prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 ptyprocess==0.6.0
 Pygments==2.6.1
+pyparsing==2.4.6
 pyrsistent==0.15.7
 python-dateutil==2.8.1
 pytz==2019.3
